--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-joi-validation": "^5.0.0",
+    "express-session": "^1.17.3",
     "joi": "^17.4.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5"
